--- a/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
+++ b/day-9/ai-tool-website-asset_ImxDyWw/ai-tool-website-asset/index.html
@@ -27,63 +27,63 @@
         </section>
     </header>
 
-    <section class="py-20 bg-[url('images/home-bg.png')] bg-no-repeat bg-cover">
+    <section class="py-10 bg-[url('images/home-bg.png')] bg-no-repeat bg-cover">
         <section class="wrapper">
-            <h1 class=" text-center text-[56px] font-semibold bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">AI startup tool</h1>
-            <h3 class="text-[48px] font-semibold text-center">Your Personal AI-Powered Branding Expert</h3>
-            <p class="text-center mb-10 font-normal text-[#FF3BFF] text-[22px]">ELEVATE EVERY ASPECT</p>
+            <h1 class=" text-center text-[80px] font-semibold bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">AI startup tool</h1>
+            <h3 class="text-[48px] font-medium text-center mb-5">Your Personal AI-Powered Branding Expert</h3>
+            <p class="text-center mb-10 font-semibold text-[#FF3BFF] text-[24px]">ELEVATE EVERY ASPECT</p>
             <div class="flex justify-center items-center">
-                <img src="images/home-image.png" alt="image" class="w-[30%]">
+                <img src="images/home-image.png" alt="image" class="w-[50%]">
             </div>
         </section>
     </section>
     
     <section class="py-20">
         <section class="wrapper">
-            <h1 class=" text-center text-[48px] font-semibold bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Full Power personal Branding</h1>
-            <h3 class="text-[32 px] font-semibold mb-20 text-center ">revolutionizing business with seamless AIintegration</h3>
-            <div class="grid grid-cols-2 gap-20 ">
+            <h1 class=" text-center text-[48px] font-bold bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Full Power Personal Branding</h1>
+            <h3 class="text-[30px] font-medium mb-20 text-center ">revolutionizing business with seamless AIintegration</h3>
+            <div class="grid grid-cols-2 gap-20  items-center m-auto">
                 <div class="col-span-1">
-                    <h3 class="text-[24px] mb-3 font-semibold">Title Copy Goes Here Be Awesome</h3>
-                    <p class="text-[14px] font-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, neque! Error totam et quasi, soluta eveniet, iusto maxime mollitia consequatur, impedit quos facilis perspiciatis harum!</p>
+                    <h3 class="text-[38px] mb-3 font-semibold">Title Copy Goes Here <br> Be Awesome</h3>
+                    <p class="text-[14px] font-normal text-gray-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, neque! Error totam et quasi, soluta eveniet, iusto maxime mollitia consequatur, impedit quos facilis perspiciatis harum!</p>
                 </div>
-                <div class="col-span-1 bg-[#181924] p-5 rounded-xl">
-                    <div class="flex justify-start pb-3 mb-3 border-b">
+                <div class="col-span-1 bg-[#181924] p-8 rounded-2xl w-[95%] m-auto text-gray-300">
+                    <div class="flex justify-start pb-5 mb-3 border-b">
                         <img src="images/stack-pink.png" alt="stack" class="w-[40px] h-[40px] mr-5">
                         <div>
-                            <h3 class="text-[22px] font-normal">Tailoring posts</h3>
-                            <p class="text-[16px] font-normal">for various social networks to maximize exposure and audience engagement</p>
+                            <h3 class="text-[18px] font-normal">Tailoring posts</h3>
+                            <p class="text-[14px] font-light mt-1">for various social networks to maximize exposure and audience engagement</p>
                         </div>
                     </div>
-                    <div class="flex justify-start">
+                    <div class="flex justify-start pt-2">
                         <img src="images/stack-violet.png" alt="stack" class="w-[40px] h-[40px] mr-5">
                         <div>
-                            <h3 class="text-[22px] font-normal">Auto-engaging</h3>
-                            <p class="text-[16px] font-normal">with your audience to strengthen your online presence and profile score</p>
+                            <h3 class="text-[18px] font-normal">Auto-engaging</h3>
+                            <p class="text-[14px] font-light mt-1">with your audience to strengthen your online presence and profile score</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-span-1 bg-[#181924] p-5 rounded-xl">
-                    <div class="flex justify-start pb-3 mb-3 border-b">
+                <div class="col-span-1 bg-[#181924] p-8 rounded-2xl w-[95%] m-auto text-gray-300">
+                    <div class="flex justify-start pb-5 mb-3 border-b border-b-gray-600">
                         <img src="images/stack-pink.png" alt="stack" class="w-[40px] h-[40px] mr-5">
                         <div>
-                            <h3 class="text-[22px] font-normal">Tailoring posts</h3>
-                            <p class="text-[16px] font-normal">for various social networks to maximize exposure and audience engagement</p>
+                            <h3 class="text-[18px] font-normal">Tailoring posts</h3>
+                            <p class="text-[14px] font-light mt-1">for various social networks to maximize exposure and audience engagement</p>
                         </div>
                     </div>
-                    <div class="flex justify-start ">
+                    <div class="flex justify-start pt-2">
                         <img src="images/stack-violet.png" alt="stack" class="w-[40px] h-[40px] mr-5">
                         <div>
-                            <h3 class="text-[22px] font-normal">Auto-engaging</h3>
-                            <p class="text-[16px] font-normal">with your audience to strengthen your online presence and profile score</p>
+                            <h3 class="text-[18px] font-normal">Auto-engaging</h3>
+                            <p class="text-[14px] font-light mt-1">with your audience to strengthen your online presence and profile score</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-span-1">
-                    <h3 class="text-[24px] mb-3 font-semibold">Title Copy Goes Here Be Awesome</h3>
-                    <p class="text-[14px] font-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, neque! Error totam et quasi, soluta eveniet, iusto maxime mollitia consequatur, impedit quos facilis perspiciatis harum!</p>
+                    <h3 class="text-[38px] mb-3 font-semibold">Title Copy Goes Here <br> Be Awesome</h3>
+                    <p class="text-[14px] font-normal text-gray-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, neque! Error totam et quasi, soluta eveniet, iusto maxime mollitia consequatur, impedit quos facilis perspiciatis harum!</p>
                 </div>
             </div>
         </section>
@@ -93,25 +93,25 @@
         <section class="wrapper">
 
             <h1 class=" text-center text-[48px] font-semibold bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Proactive and Reactive Modes</h1>
-            <h3 class="text-[32px] font-semibold mb-20 text-center ">Stay Ahead in the Branding Game Content:</h3>
+            <h3 class="text-[28px] font-medium mb-20 text-center ">Stay Ahead in the Branding Game Content:</h3>
 
             <div class="w-[60%] m-auto grid grid-cols-2 gap-10">
 
                 <div class="col-span-1  bg-[#181924] p-7 pb-12 rounded-3xl">
-                    <h3 class=" text-center text-[32px] font-semibold mb-3 bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Proactive <span class="text-white">mode:</span> </h3>
-                    <p class="text-[16px] text-center mb-32">Regularly publish throught pieces and engage with your audience</p>
+                    <h3 class=" text-start text-[32px] font-semibold mb-3 bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Proactive <span class="text-white">mode:</span> </h3>
+                    <p class="text-[16px] text-start mb-32  text-gray-200">Regularly publish thought pieces and engage with your audience</p>
                     <a href="#" class="text-[14px] font-semibold py-3 px-5 bg-[#4E4BE4] rounded-full">CHOOSE THIS MODE</a>
                 </div>
 
                 <div class="col-span-1  bg-[#181924] p-7 pb-12 rounded-3xl">
-                    <h3 class=" text-center text-[32px] font-semibold mb-3 bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Proactive <span class="text-white">mode:</span></h3>
-                    <p class="text-[16px] text-center mb-32">Regularly publish throught pieces and engage with your audience</p>
+                    <h3 class=" text-start text-[32px] font-semibold mb-3 bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Proactive <span class="text-white">mode:</span></h3>
+                    <p class="text-[16px] text-start mb-32  text-gray-200">Regularly publish throught pieces and engage with your audience</p>
                     <a href="#" class="text-[14px] font-semibold py-3 px-5 bg-[#4E4BE4] rounded-full">CHOOSE THIS MODE</a>
                 </div>
                 
                 <div class="col-span-2  bg-[#181924] p-7 pb-12 rounded-3xl">
-                    <h3 class=" text-center text-[32px] mb-3 font-semibold bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Seamlessly <span class="text-white">switch between modes:</span></h3>
-                    <p class="text-[16px] text-center mb-24">Regularly publish throught pieces and engage with your audience</p>
+                    <h3 class=" text-start text-[32px] mb-3 font-semibold bg-gradient-to-r from-[#4E4BE4] to-[#E862FE] text-transparent bg-clip-text">Seamlessly <span class="text-white">switch between modes:</span></h3>
+                    <p class="text-[16px] text-start mb-24  text-gray-200">Regularly publish throught pieces and engage with your audience</p>
                     <a href="#" class="text-[14px] font-semibold py-3 px-5 bg-[#4E4BE4] rounded-full">CHOOSE THIS MODE</a>     
                 </div>
 
@@ -120,25 +120,25 @@
     </section>
 
     <section>
-        <section class="wrapper flex justify-between items-center my-32">
+        <section class="wrapper flex justify-between items-center my-32 m-auto w-[85%]">
 
-            <div class="w-[35%]">
+            <div class="w-[40%]">
                 <img src="images/footer-image.png" alt="img" class="w-full">
             </div>
 
             <div class="w-[55%]">
 
-                <h3 class="text-[32px] mb-3 font-semibold">Title Copy Goes Here Be Awesome</h3>
-                <p class="text-[16px] font-normal mb-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, neque! Error totam et quasi, soluta eveniet, iusto maxime mollitia consequatur, impedit quos facilis perspiciatis harum!</p>
+                <h3 class="text-[42px] mb-3 font-semibold">Title Copy Goes Here <br> Be Awesome</h3>
+                <p class="text-[16px] font-normal mb-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, neque! Error totam et quasi, soluta eveniet, iusto maxime mollitia consequatur, impedit quos facilis perspiciatis harum!</p>
                 <a href="#" class="text-[14px] font-semibold py-3 px-5 bg-[#4E4BE4] rounded-full">TALK TO AN EXPERT</a>     
             </div>
 
         </section>
     </section>
 
-    <footer class="h-[80px]">
-        <section class="wrapper h-full flex justify-center items-center border-t border-gray-400">
-            <p class="my-1">
+    <footer class="h-[70px]">
+        <section class="wrapper h-full flex justify-center pt-4 border-t border-gray-400">
+            <p class="text-gray-300">
                 Copyright © 2022 Company name
             </p>
         </section>
